# sipi

./: .env.staging.example  .gitignore  INDEX.md  README.md  VERSION_2_MEJORAS.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  main.py  manifiesto_bdns_organos.json  osm_cli.py  osm_sync_agent_v2.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.agent/workflows/: start_dev.md
.github/workflows/: deploy.yml
app/graphql/: types.py
apps/api/: .gitignore  docker-compose.yml  requirements.txt
apps/frontend/: fix_imports.py  rename_catalogos_to_tipologias.py
apps/sipi-survey/: README.md
docs/: DEPLOY_STAGING.md  DISENO_MODULOS_NUEVOS.md  INTEGRACION_OPENDATAMANAGER.md  INVENTARIO_Y_REFACTOR.md
extract/cee/: extract_parroquias.py
extract/clients/: odmgr_client.py
extract/confer/: extract_confer.py
extract/ine/: descargar_nomenclator.py
extract/mjer/: extract_rer.py
extract/notarios/: descargar_notarios_cgn.py
extract/osm/: extract_inmuebles_osm.py
load/: cargar_administraciones.py  cargar_agencias_inmobiliarias.py  cargar_colegios_notariales.py  cargar_colegios_profesionales.py  cargar_diocesis_odmgr.py  cargar_entidades_religiosas.py  cargar_geografia.py  cargar_parroquias.py  cargar_provincias_eclesiasticas.py  cargar_registros_propiedad.py  cargar_tipologias.py  enriquecer_er_nif.py  enriquecer_er_nivel_superior.py  enriquecer_er_tipos.py  enriquecer_nombres_alternativos.py
sipi_core/: .env.development.example  config.py
src/: main.js
workflows/: run_all.py  setup_opendatamanager.py
(+460 files in other folders)
